添加课程信息服务类--yang.bai

--- a/course/src/main/resources/application.yml
+++ b/course/src/main/resources/application.yml
@@ -11,5 +11,6 @@ spring:
     password: share_by
 
 mybatis:
-  mapper-locations: classpath:mybatis/UserMapper.xml
+#  mapper-locations: classpath:mybatis/UserMapper.xml
+  mapper-locations: classpath:mybatis/*.xml
   type-aliases-package: com.course.model
