修改mapper.xml文件位置目录--yang.bai

--- a/course/src/main/resources/application.yml
+++ b/course/src/main/resources/application.yml
@@ -12,5 +12,5 @@ spring:
 
 mybatis:
 #  mapper-locations: classpath:mybatis/UserMapper.xml
-  mapper-locations: classpath:mybatis/*.xml
+  mapper-locations: classpath:mybatis/mapper/*.xml
   type-aliases-package: com.course.model
